<?xml version="1.0" encoding="utf-8"?><LinearLayout    	xmlns:android="http://schemas.android.com/apk/res/android"        android:layout_width="fill_parent"        android:layout_height="fill_parent"        android:orientation="vertical"        android:keepScreenOn="true">                <TextView  			    android:layout_width="fill_parent" 			    android:layout_height="wrap_content" 			    android:text="@string/bluetooth_le_dut_mode"			    android:lines="2" />        <Button android:id="@+id/EnableLEMode"	            android:text="@string/enable_le_mode"	            android:layout_width="fill_parent"	            android:layout_height="wrap_content" />	     	<Button android:id="@+id/DisableLEMode"	            android:text="@string/disable_le_mode"	            android:layout_width="fill_parent"	            android:layout_height="wrap_content" /></LinearLayout>