<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextViewBdAddrTitle" android:text="@string/bd_addr_title" android:textSize="15dip" android:layout_margin="20dip"></TextView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextViewBdAddr" android:text="@string/bd_addr" android:textSize="15dip" android:layout_marginLeft="20dip"></TextView>
    <Button android:layout_margin="20dip" android:layout_height="60dip" android:layout_width="200dip" android:id="@+id/ButtonExitBdAddr" android:text="@string/exit_bd_addr"></Button>
</LinearLayout>
